# such-toxic

./: .gitignore  Makefile  README.md  pyproject.toml  schema.prisma
datasets/: retrain_reddit_abuse_test.txt.tar.xz  wikidata_multilingual_validation.csv.tar.xz
example/: Cargo.toml
example/src/: main.rs
notebooks/: annotator-prompt.txt  annotator.ipynb  convert_to_onnx.ipynb  embeddings.ipynb  import_ral_e.ipynb  import_wiki_data.ipynb  score-eval.ipynb  such_toxic.ipynb  t5_toxic.ipynb
prompts/: annotator-prompt.txt
such_toxic/: mean_pooler.py  t5.py  text_classifier.py  util.py
tests/: test_util.py
