[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Nish Tahir <nishtahir@outlook.com>"]
description = ""
name = "such-toxic"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
nest-asyncio = "^1.6.0"
pandas = "^2.2.1"
python = "^3.10"
python-dotenv = "^1.0.1"
safetensors = "^0.4.2"
scikit-learn = "^1.4.1.post1"
sentence-transformers = "^2.5.1"
sentencepiece = "^0.2.0"
setuptools = "^69.2.0"
torch = "^2.2.1"
transformers = "^4.38.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.3"
mlflow = "^2.11.1"
mypy = "^1.9.0"
nbqa = "^1.8.4"
onnx = "^1.15.0"
onnxruntime = "^1.17.1"
prisma = "^0.12.0"
psutil = "^5.9.8"
psycopg2-binary = "^2.9.9"
pynvml = "^11.5.0"
pytest = "^8.1.1"
ruff = "^0.7.1"
toml-sort = "^0.23.1"
tqdm = "^4.66.2"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
exclude = [".venv"]

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
trailing_comma_inline_array = true
